--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -252,5 +252,8 @@
   "abcde": "אבגדה",
   "a": "א",
   "update": "עדכן",
-  "date-hint": "הקלד שנה, שנה/חודש או שנה/חודש/יום"
+  "date-hint": "הקלד שנה, שנה/חודש או שנה/חודש/יום",
+  "please-update-head": "<p dir='rtl'>תוכנת האתר עודכנה</p>",
+  "please-update-body": "<p dir='rtl'>אנא רענן את הדף.<br><p>",
+  "please-update-stubborn": "<p dir='rtl'>אם הודעה זו חוזרת למרות הרענון, יש לנקות את זכרון המטמון</p>"
 }
