--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -93,10 +93,10 @@
     "date-of-death": "Date of death",
     "birth-place": "Birth place",
     "death-place": "Death place",
-    "born-F": "born",
-    "born-M": "born",
-    "died-F": "died",
-    "died-M": "died",
+    "born-f": "born",
+    "born-m": "born",
+    "died-f": "died",
+    "died-m": "died",
     "in-date": "in ",
     "in-place": "in ",
     "save": "Save",
