--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -93,10 +93,10 @@
     "date-of-death": "תאריך פטירה",
     "birth-place": "מקום לידה",
     "death-place": "מקום הפטירה",
-    "born-F": "נולדה",
-    "born-M": "נולד",
-    "died-F": "נפטרה",
-    "died-M": "נפטר",
+    "born-f": "נולדה",
+    "born-m": "נולד",
+    "died-f": "נפטרה",
+    "died-m": "נפטר",
     "in-place": "ב",
     "in-date": "ב-",
     "save": "שמור",
