--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -255,5 +255,6 @@
   "date-hint": "Enter year, month/year or full date",
   "please-update-head": "The system has been updated<br>",
   "please-update-body": "<p>Please refresh the page.<br><p> ",
-  "please-update-stubborn": "<p>If this message repeats, please <strong>clear the cache memory</strong></p>"
+  "please-update-stubborn": "<p>If this message repeats, please <strong>clear the cache memory</strong></p>",
+  "please-update": "A new version is available.\n\nPlease refresh the screen (F5 or ctrl+F5)\n"
 }
