--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -255,5 +255,6 @@
   "date-hint": "הקלד שנה, שנה/חודש או שנה/חודש/יום",
   "please-update-head": "<p dir='rtl'>תוכנת האתר עודכנה</p>",
   "please-update-body": "<p dir='rtl'>אנא רענן את הדף.<br><p>",
-  "please-update-stubborn": "<p dir='rtl'>אם הודעה זו חוזרת למרות הרענון, יש לנקות את זכרון המטמון</p>"
+  "please-update-stubborn": "<p dir='rtl'>אם הודעה זו חוזרת למרות הרענון, יש לנקות את זכרון המטמון</p>",
+  "please-update": "התוכנה עודכנה לאחרונה.\n\n,כדי להתעדכן, רענן את הדפדפן:\nהקש F5 או ctrl+F5"
 }
