both froala and toastr work now

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -153,7 +153,8 @@
     "register-done": "Got it",
     "passwords-dont-match": "Passwords don't match",
     "chat-rooms": "Chat rooms",
-    "font-size": "Select font size"
+    "font-size": "Select font size",
+    "login-successful": "You have logged in successfuly"
   },
   "photos": {
     "photos": "Photos",
