--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -155,7 +155,8 @@
     "passwords-dont-match": "הסיסמה לאישור שונה מהסיסמה",
     "chat-rooms": "קבוצות דיון",
     "font-size": "בחרו את גודל האותיות",
-    "login-successful": "התחברת בהצלחה!"
+    "login-successful": "התחברת בהצלחה!",
+    "share": "העתק את הכתובת לצורך שיתוף"
   },
   "photos": {
     "photos": "תמונות",
@@ -258,5 +259,10 @@
   "please-update-head": "<p dir='rtl'>תוכנת האתר עודכנה</p>",
   "please-update-body": "<p dir='rtl'>רענן את הדף: לחץ F5 או על החץ המעוגל שבראש הדפדפן.<br><p>",
   "please-update-stubborn": "<p dir='rtl'>אם הודעה זו חוזרת למרות הרענון, יש לנקות את זכרון המטמון</p>",
-  "please-update": "התוכנה עודכנה לאחרונה.\n\n,כדי להתעדכן, רענן את הדפדפן:\nהקש F5 או ctrl+F5"
+  "please-update": "התוכנה עודכנה לאחרונה.\n\n,כדי להתעדכן, רענן את הדפדפן:\nהקש F5 או ctrl+F5",
+   "promote-header-text": "<p>המנוע שמאחורי אתר הספורים עשוי להתאים לאתרים של קיבוצים, מושבים, משפחות גדולות ואולי קהילות נוספות</p><p>ליצירת קשר עם המפתחים, מלא בבקשה את הפרטים ולחץ על כפתור <b>שלח</b></p>",
+  "promote-name": "שם מלא",
+  "promote-mobile": "מספר נייד",
+  "promote-message": "ספר לנו עליך",
+  "promote-send": "שלח"
 }
