--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -205,7 +205,8 @@
     "unknown": "בלתי ידוע",
     "upload": "הוסף תמונות",
     "photo-date": "תאריך התמונה",
-    "photos-date": "תאריך התמונות"
+    "photos-date": "תאריך התמונות",
+    "copy-photo-url": "העתק את כתובת התמונה למטרת שיתוף"
   },
   "videos": {
     "videos": "סרטונים"
