--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -206,7 +206,9 @@
     "upload": "הוסף תמונות",
     "photo-date": "תאריך התמונה",
     "photos-date": "תאריך התמונות",
-    "copy-photo-url": "העתק את כתובת התמונה למטרת שיתוף"
+    "copy-photo-url": "העתק את כתובת התמונה למטרת שיתוף",
+    "search-member": "עם חבר...",
+    "candidates": "מועמדים לצרוף מתוך התמונות"
   },
   "videos": {
     "videos": "סרטונים"
