start using grid. minor cosmetics.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -131,7 +131,7 @@
     "updated-on-date": "עדכן בתאריך "
   },
   "user": {
-    "login": "התחבר",
+    "login": "התחבר כעורך ",
     "logout": "התנתק",
     "please-login": "התחבר בבקשה",
     "email-address": "כתובת דואר אלקטרוני",
