--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -157,7 +157,8 @@
     "chat-rooms": "קבוצות דיון",
     "font-size": "בחרו את גודל האותיות",
     "login-successful": "התחברת בהצלחה!",
-    "share": "העתק את הכתובת לצורך שיתוף"
+    "share": "העתק את הכתובת לצורך שיתוף",
+    "number-of-hits": "מספרי הכניסות באתר"
   },
   "photos": {
     "photos": "תמונות",
