--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -218,7 +218,9 @@
         "photos-date": "תאריך התמונות",
         "copy-photo-url": "העתק את כתובת התמונה למטרת שיתוף",
         "search-member": "עם חבר...",
-        "candidates": "מועמדים לצרוף מתוך התמונות"
+        "candidates": "מועמדים לצרוף מתוך התמונות",
+        "delete": "מחק את התמונה",
+        "rotate": "סובב את התמונה"
     },
     "videos": {
         "videos": "סרטונים"
