hit counts - wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -123,6 +123,7 @@
         "clear-member-group": "Clear member selections",
         "story": "Selet members associated with the story",
         "back-to-story": "Back to the story page",
+        "back-to-term": "Back to the term page",
         "to-story-page": "To the story page",
         "family-only": "Family connections",
         "all-members": "All members",
