--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -123,6 +123,7 @@
         "clear-member-group": "נקה את הקבוצה שנבחרה",
         "story": "בחירת חברים הקשורים לסיפור",
         "back-to-story": "חזרה לדף הספור",
+        "back-to-term": "חזרה לדף המונח",
         "to-story-page": "לדף הספור",
         "family-only": "קשרי משפחה",
         "all-members": "כל החברים",
