new clicks statistics was incorrect

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -280,5 +280,7 @@
     "promote-name": "Name",
     "promote-mobile": "Mobile phone",
     "promote-message": "Message",
-    "promote-send": "Send"
+    "promote-send": "Send",
+    "by-new-count": "By new count",
+    "by-old-count": "By old count"
 }
