photos & members assoiciated with a term

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -23,7 +23,7 @@
         "enter-story-name": "תן כותרת לסיפור",
         "enter-story-source": "מקור הסיפור",
         "cancel": "בטל",
-        "filter": "חפוש מהיר בשמות הספורים והמחברים",
+        "filter": "חפוש מהיר בשמות הספורים והמחברים שנמצאו",
         "save": "שמור",
         "to-the-full-story": "לסיפור המלא",
         "associated-members": "חברים הקשורים לסיפור",
