stories menu item replaced by search box

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -282,5 +282,6 @@
     "promote-message": "Message",
     "promote-send": "Send",
     "by-new-count": "By new count",
-    "by-old-count": "By old count"
+    "by-old-count": "By old count",
+    "enter-search-words": "Enter search words"
 }
