--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -282,5 +282,6 @@
     "promote-message": "ספר לנו עליך",
     "promote-send": "שלח",
     "by-new-count": "קליקים חדשים",
-    "by-old-count": "קליקים מצטברים"
+    "by-old-count": "קליקים מצטברים",
+    "enter-search-words": "הקלד מילות חיפוש"
 }
