--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -284,5 +284,9 @@
     "by-new-count": "קליקים חדשים",
     "by-old-count": "קליקים מצטברים",
     "enter-search-words": "הקלד מילות חיפוש",
-    "no-results": "לא נמצאו תוצאות מתאימות"
+    "no-results": "לא נמצאו תוצאות מתאימות",
+    "result1": "חברים",
+    "result2": "ספורים",
+    "result3": "תמונות",
+    "result4": "מונחים"
 }
