--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -72,7 +72,8 @@
         "consolidate-selected-story": "Merge into one story",
         "highlight-on": "Highlighting search words on/off",
         "clean": "Clean",
-        "promote-selected-stories": "Promote selected stories"
+        "promote-selected-stories": "Promote selected stories",
+        "unknown-source": "Unknown source"
     },
     "members": {
         "members": "Members",
