--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -259,7 +259,7 @@
     },
     "palettes": {
         "select-colors": "בחר צבעים",
-        "palette-default": "ברירת המחדל",
+        "palette-default": "אפור",
         "palette-oldie": "ישן נושן",
         "palette-sky": "צבעי שמים",
         "palette-earth": "צבעי אדמה"
