matters of style

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -59,7 +59,7 @@
         "to-the-member-page": "לדף החבר",
         "to-the-photo-page": "לדף התמונה",
         "term-page": "מתוך מילון המונחים",
-        "categories": "בחירת קטגוריות",
+        "categories": "בחירת נושאים",
         "words": "חיפוש מתקדם ",
         "uploaded-any-time": "ספורים שהועלו בזמן כלשהו",
         "uploaded-today": "ספורים שהועלו היום",
@@ -182,7 +182,7 @@
         "uploaded-this-month": "תמונות שהועלו החודש",
         "uploaded-this-quarter": "תמונות שהועלו ברבעון זה",
         "uploaded-this-year": "תמונות שהועלו השנה",
-        "click-topic": "חפש תג והקלק עליו",
+        "click-topic": "חפש נושא והקלק עליו",
         "click-photographer": "חפש צלם והקלק עליו",
         "from-date": "צולם אחרי",
         "to-date": "צולם לפני",
