issues with terms

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -220,6 +220,7 @@
         "photos-date": "Photos date",
         "copy-photo-url": "Copy photo address for sharing",
         "search-member": "With Member",
+        "any-photo": "All photos",
         "candidates": "Candidates from the photos",
         "delete": "Delete the photo",
         "rotate": "Rotate the photo"
