--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -220,6 +220,7 @@
         "photos-date": "תאריך התמונות",
         "copy-photo-url": "העתק את כתובת התמונה למטרת שיתוף",
         "search-member": "עם חבר...",
+        "any-photo": "כל התמונות",
         "candidates": "מועמדים לצרוף מתוך התמונות",
         "delete": "מחק את התמונה",
         "rotate": "סובב את התמונה"
