add missing translation

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -124,6 +124,7 @@
         "load-member-group": "Load members group",
         "clear-member-group": "Clear member selections",
         "story": "Selet members associated with the story",
+        "term": "Selet members associated with the term",
         "back-to-story": "Back to the story page",
         "back-to-term": "Back to the term page",
         "to-story-page": "To the story page",
