--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -124,6 +124,7 @@
         "load-member-group": "טען קבוצת חברים",
         "clear-member-group": "נקה את הקבוצה שנבחרה",
         "story": "בחירת חברים הקשורים לסיפור",
+        "term": "בחירת חברים הקשורים למונח",
         "back-to-story": "חזרה לדף הספור",
         "back-to-term": "חזרה לדף המונח",
         "to-story-page": "לדף הספור",
