--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -293,9 +293,8 @@
     "update": "update",
     "date-hint": "Enter year, month/year or full date",
     "please-update-head": "The system has been updated<br>",
-    "please-update-body": "<p>Please refresh the page.<br><p> ",
+    "please-update-body": "<p>The page will refresh now.<br><p> ",
     "please-update-stubborn": "<p>If this message repeats, please <strong>clear the cache memory</strong></p>",
-    "please-update": "A new version is available.\n\nPlease refresh the screen (F5 or ctrl+F5)\n",
     "promote-header-text": "<p>The engine behind this site may be used for other communities, large families etc.</p><p>To contact the developers, plase fill the form below and then press the SEND button.</p>",
     "promote-name": "Name",
     "promote-mobile": "Mobile phone",
