--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -292,9 +292,8 @@
     "update": "עדכן",
     "date-hint": "הקלד שנה, שנה/חודש או שנה/חודש/יום",
     "please-update-head": "<p dir='rtl'>תוכנת האתר עודכנה</p>",
-    "please-update-body": "<p dir='rtl'>רענן את הדף: לחץ F5 או על החץ המעוגל שבראש הדפדפן.<br><p>",
+    "please-update-body": "<p dir='rtl'>הדף ייטען עכשיו מחדש<br><p>",
     "please-update-stubborn": "<p dir='rtl'>אם הודעה זו חוזרת למרות הרענון, יש לנקות את זכרון המטמון</p>",
-    "please-update": "התוכנה עודכנה לאחרונה.\n\n,כדי להתעדכן, רענן את הדפדפן:\nהקש F5 או ctrl+F5",
     "promote-header-text": "<p>המנוע שמאחורי אתר הספורים עשוי להתאים לאתרים של קיבוצים, מושבים, משפחות גדולות ואולי קהילות נוספות</p><p>ליצירת קשר עם המפתחים, מלא בבקשה את הפרטים ולחץ על כפתור <b>שלח</b></p>",
     "promote-name": "שם מלא",
     "promote-mobile": "מספר נייד",
@@ -302,7 +301,7 @@
     "promote-send": "שלח",
     "by-new-count": "קליקים חדשים",
     "by-old-count": "קליקים מצטברים",
-    "enter-search-words": "הקלד מילות חיפוש",
+    "enter-search-words": "הקלד מילות חיפוש והמתן",
     "no-results": "לא נמצאו תוצאות מתאימות",
     "result1": "חברים",
     "result2": "ספורים",
