--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -122,6 +122,7 @@
         "by-first-name": "לפי השם הפרטי",
         "by-age-young-first": "צעירים תחילה",
         "by-age-old-first": "מבוגרים תחילה",
+        "profile-missing-first": "חסרי תמונת פרופיל קודם",
         "member-groups": "קבוצות חברים",
         "save-member-group": "שמור קבוצת חברים",
         "load-member-group": "טען קבוצת חברים",
@@ -299,6 +300,12 @@
     "promote-mobile": "מספר נייד",
     "promote-message": "ספר לנו עליך",
     "promote-send": "שלח",
+    "feedback-header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
+    "feedback-bad-message": "מה אינני אוהב באתר",
+    "feedback-good-message": "מה אני אוהב באתר",
+    "feedback-name": "שם. לא חובה!",
+    "feedback-email-address": "כתובת דואר אלקטרוני. לא חובה!",
+    "feedback-message-successful": "המשוב שלך נשמר בהצלחה",
     "by-new-count": "קליקים חדשים",
     "by-old-count": "קליקים מצטברים",
     "enter-search-words": "הקלד מילות חיפוש והמתן",
@@ -306,5 +313,6 @@
     "result1": "חברים",
     "result2": "ספורים",
     "result3": "תמונות",
-    "result4": "מונחים"
+    "result4": "מונחים",
+    "feedback": "משוב"
 }
