--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -277,6 +277,20 @@
         "palette-sky": "Sky",
         "palette-earth": "Earth"
     },
+    "feedback": {
+        "feedback": "Feedback",
+        "any-device": "Any device",
+        "desktop": "Desktop",
+        "tablet": "Tablet",
+        "smartphone": "Smartphone",
+        "header-text": "<p>Your feedback is important.</p>",
+        "bad-message": "What I do not like in the site",
+        "good-message": "What I like in the site",
+        "name": "Name. Not mandatory!",
+        "email-address": "Email address. Not mandatory!",
+        "message-successful": "Your message was succesfully sent",
+        "device-details": "Device details"
+    },
     "go-back": "Back",
     "parents": "Parents",
     "siblings": "Siblings",
@@ -301,12 +315,6 @@
     "promote-mobile": "Mobile phone",
     "promote-message": "Message",
     "promote-send": "Send",
-    "feedback-header-text": "<p>Your feedback is important.</p>",
-    "feedback-bad-message": "What I do not like in the site",
-    "feedback-good-message": "What I like in the site",
-    "feedback-name": "Name. Not mandatory!",
-    "feedback-email-address": "Email address. Not mandatory!",
-    "feedback-message-successful": "Your message was succesfully sent",
     "by-new-count": "By new count",
     "by-old-count": "By old count",
     "enter-search-words": "Enter search words",
@@ -314,6 +322,5 @@
     "result1": "Members",
     "result2": "Stories",
     "result3": "Photos",
-    "result4": "Terms",
-    "feedback": "Feedback"
+    "result4": "Terms"
 }
