--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -276,6 +276,20 @@
         "palette-sky": "צבעי שמים",
         "palette-earth": "צבעי אדמה"
     },
+    "feedback": {
+        "feedback": "משוב",
+        "any-device": "מסך כלשהו",
+        "desktop": "מחשב שולחן",
+        "tablet": "טבלט",
+        "smartphone": "טלפון חכם",
+        "header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
+        "bad-message": "מה אינני אוהב באתר",
+        "good-message": "מה אני אוהב באתר",
+        "name": "שם. לא חובה!",
+        "email-address": "כתובת דואר אלקטרוני. לא חובה!",
+        "message-successful": "המשוב שלך נשמר בהצלחה",
+        "device-details": "פרטי המכשיר"
+    },
     "go-back": "חזור",
     "parents": "הורים",
     "siblings": "אחים/אחיות",
@@ -300,12 +314,6 @@
     "promote-mobile": "מספר נייד",
     "promote-message": "ספר לנו עליך",
     "promote-send": "שלח",
-    "feedback-header-text": "<p>המשוב שלך חשוב להמשך הפיתוח ושיפור חווית המשתמש.</p>",
-    "feedback-bad-message": "מה אינני אוהב באתר",
-    "feedback-good-message": "מה אני אוהב באתר",
-    "feedback-name": "שם. לא חובה!",
-    "feedback-email-address": "כתובת דואר אלקטרוני. לא חובה!",
-    "feedback-message-successful": "המשוב שלך נשמר בהצלחה",
     "by-new-count": "קליקים חדשים",
     "by-old-count": "קליקים מצטברים",
     "enter-search-words": "הקלד מילות חיפוש והמתן",
@@ -313,6 +321,5 @@
     "result1": "חברים",
     "result2": "ספורים",
     "result3": "תמונות",
-    "result4": "מונחים",
-    "feedback": "משוב"
+    "result4": "מונחים"
 }
