--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -241,6 +241,10 @@
         "video-name": "תן שם לקטע הוידאו",
         "send": "שלח",
         "message-successful": "הוידאו הועלה בהצלחה",
+        "duplicate": "הוידאו כבר קיים במערכת",
+        "unknown-video-type": "סוג וידאו שאינו מוכר למערכת",
+        "next": "דפדף קדימה",
+        "prev": "דפדף אחורה",
         "filter": "חפוש מהיר בשמות הסרטונים"
     },
     "terms": {
