get video list. wip.

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -208,7 +208,7 @@
         "more": "יותר",
         "less": "פחות",
         "save-merges": "שמור את המיזוגים",
-        "apply-to-selected": "תייג את התמונות שנבחרו",
+        "apply-to-selected": "יִשֵּׂם לתמונות שנבחרו",
         "download": "הורדת תמונות",
         "done-selecting": "סיים את שלב הבחירה",
         "new-story": "ללא כותרת",
