videos. mostly date range issues.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -246,6 +246,7 @@
         "unknown-video-type": "Unknown video type",
         "next": "Page forward",
         "prev": "Page backward",
+        "video-date-range": "Video Date",
         "filter": "Fast search in video titles"
     },
     "terms": {
