--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -245,6 +245,7 @@
         "unknown-video-type": "סוג וידאו שאינו מוכר למערכת",
         "next": "דפדף קדימה",
         "prev": "דפדף אחורה",
+        "video-date-range": "תאריך הוידאו",
         "filter": "חפוש מהיר בשמות הסרטונים"
     },
     "terms": {
