--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -246,6 +246,9 @@
         "next": "דפדף קדימה",
         "prev": "דפדף אחורה",
         "video-date-range": "תאריך הוידאו",
+        "keywords": "נושאים קשורים",
+        "photographer-name": "שם הצלם",
+        "unknown-photographer": "לא ידוע",
         "filter": "חפוש מהיר בשמות הסרטונים"
     },
     "terms": {
