exception in date range constructor

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -238,7 +238,7 @@
         "video-clips": "Video clips",
         "new": "New video",
         "add-video": "Add video",
-        "paste-video-address": "Paste the video address you copied",
+        "paste-video-address": "Paste the video address you copied from Youtube",
         "video-name": "Name the video clip",
         "send": "Send",
         "message-successful": "Video was successfuly added",
