--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -237,7 +237,7 @@
         "video-clips": "סרטוני וידאו",
         "new": "סרטון חדש",
         "add-video": "הוסף וידאו",
-        "paste-video-address": "הדבק את כתובת הוידאו שהעתקת",
+        "paste-video-address": "הדבק את כתובת הוידאו שהעתקת מיוטיוב",
         "video-name": "תן שם לקטע הוידאו",
         "send": "שלח",
         "message-successful": "הוידאו הועלה בהצלחה",
