video stories. more video wip.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -338,5 +338,6 @@
     "result1": "Members",
     "result2": "Stories",
     "result3": "Photos",
-    "result4": "Terms"
+    "result4": "Terms",
+    "result8": "Video"
 }
