--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -337,5 +337,6 @@
     "result1": "חברים",
     "result2": "ספורים",
     "result3": "תמונות",
-    "result4": "מונחים"
+    "result4": "מונחים",
+    "result8": "וידאו"
 }
