--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -250,6 +250,7 @@
         "keywords": "Associatted topics",
         "photographer-name": "Photographer name",
         "unknown-photographer": "Unknown",
+        "promote-selected-videos": "Promote selected videos",
         "filter": "Fast search in video titles"
     },
     "terms": {
