--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -249,6 +249,7 @@
         "keywords": "נושאים קשורים",
         "photographer-name": "שם הצלם",
         "unknown-photographer": "לא ידוע",
+        "promote-selected-videos": "קדם את הסרטונים שנבחרו",
         "filter": "חפוש מהיר בשמות הסרטונים"
     },
     "terms": {
