--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -201,6 +201,7 @@
         "upload-in-progress": "Upload in progress...",
         "photos-uploaded": "Successfuly uploaded - ",
         "photos-duplicate": "Duplicate photos - ",
+        "left": "Left",
         "failed": "Failed - ",
         "upload-files": "Upload photos",
         "select-photos": "Select photos",
