--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -200,6 +200,7 @@
         "upload-in-progress": "...התמונות נשלחות לשרת",
         "photos-uploaded": " - תמונות שהועלו בהצלחה",
         "photos-duplicate": " - תמונות שכבר הועלו בעבר",
+        "left": "נותרו",
         "failed": " - לא נקלטו במערכת",
         "upload-files": "העלאת תמונות",
         "select-photos": "בחר תמונות",
