--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -1,6 +1,5 @@
 {
     "home": {
-        "home": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
         "videos": "קטעי וידאו",
         "sample-stories": "מבחר ספורים",
         "messages": "לוח מודעות",
@@ -14,7 +13,7 @@
         "to-the-page-of": "לדף החבר של ",
         "new-message": "הודעה חדשה"
     },
-    "gbstories": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
+    "app-title": "סִפּוּרֵי גִּבְעַת בְּרֶנֶר",
     "stories": {
         "stories": "ספורים",
         "place-stories": "ספורי המקום",
