--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -14,7 +14,7 @@
         "to-the-page-of": "To Member's Page",
         "new-message": "New Message"
     },
-    "gbstories": "GB Stories",
+    "app-title": "GB Stories",
     "stories": {
         "stories": "Stories",
         "place-stories": "Place Stories",
