sync photo caption with photo story name. start docs.

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -256,6 +256,9 @@
         "promote-selected-videos": "Promote selected videos",
         "filter": "Fast search in video titles"
     },
+    "docs": {
+        "docs": "Docs"
+    },
     "terms": {
         "terms": "Terms",
         "terms-lexicon": "Terms lexicon",
