stories without keywords left empty screen

--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -339,7 +339,7 @@
     "by-new-count": "קליקים חדשים",
     "by-old-count": "קליקים מצטברים",
     "enter-search-words": "הקלד מילות חיפוש והמתן",
-    "no-results": "לא נמצאו תוצאות מתאימות",
+    "no-results": "<p dir='rtl'>לא נמצאו תוצאות מתאימות.<br>יש לשנות או להשמיט חלק מהמסננים</p>",
     "result1": "חברים",
     "result2": "ספורים",
     "result3": "תמונות",
