--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -260,7 +260,8 @@
         "upload": "הוסף מסמכים",
         "upload-files": "העלאת מסמכים",
         "select-docs": "בחר מסמכים",
-        "upload-in-progress": "המסמכים נשלחים לשלט...",
+        "apply-to-selected": "תייג את המסמכים שנבחרו",
+        "upload-in-progress": "המסמכים נשלחים לשרת...",
         "docs-were-selected": " - מסמכים שנבחרו",
         "docs-uploaded": " - מסמכים שהועלו בהצלחה",
         "docs-duplicate": " - מסמכים שהועלו בעבר",
