--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -262,6 +262,7 @@
         "upload": "Add documents",
         "upload-files": "Documents upload",
         "select-docs": "Select documents",
+        "apply-to-selected": "Tag the selected documents",
         "upload-in-progress": "Upload in progress...",
         "docs-uploaded": "Successfuly uploaded - ",
         "docs-duplicate": "Duplicate documents - ",
