--- a/locales/he/translation.json
+++ b/locales/he/translation.json
@@ -260,6 +260,7 @@
         "upload": "הוסף מסמכים",
         "upload-files": "העלאת מסמכים",
         "select-docs": "בחר מסמכים",
+        "matching-docs": "מסמכים שכוללים את המילים שנבחרו",
         "apply-to-selected": "תייג את המסמכים שנבחרו",
         "upload-in-progress": "המסמכים נשלחים לשרת...",
         "docs-were-selected": " - מסמכים שנבחרו",
